force-app/main/default/objects/Case/fields/Administrative_Action__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Action__c</fullName>
    <label>Recommended Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Personnel_Actions</valueSetName>
    </valueSet>
</CustomField>