force-app/main/default/objects/Case/fields/Bargaining_Unit_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Bargaining_Unit_Review_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the Bargaining Unit Completed the Review?</inlineHelpText>
    <label>Bargaining Unit Review Completed</label>
    <type>Checkbox</type>
</CustomField>