force-app/main/default/objects/Case/fields/Chief_Council_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Chief_Council_Review_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has Chief Council Reviewed this Request?</inlineHelpText>
    <label>Chief Council Review Completed</label>
    <type>Checkbox</type>
</CustomField>