force-app/main/default/objects/Case/fields/Core_System_Access_User__c.field-meta.xml
<CustomField>
    <fullName>Core_System_Access_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The User that Core System permissions should be copied</inlineHelpText>
    <label>Core System Access User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>