force-app/main/default/objects/Case/fields/Date_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Incident__c</fullName>
    <inlineHelpText>Date Incident Occurred</inlineHelpText>
    <label>Date of Incident</label>
    <type>Date</type>
</CustomField>