force-app/main/default/objects/Case/fields/EEO_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>EEO_Review_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has EEO Completed their review of the case?</inlineHelpText>
    <label>EEO Review Completed</label>
    <type>Checkbox</type>
</CustomField>