force-app/main/default/objects/Case/fields/employee_contact_id__c.field-meta.xml
<CustomField>
    <fullName>employee_contact_id__c</fullName>
    <formula>$User.Employee_Contact_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>employee_contact_id</label>
    <type>Text</type>
</CustomField>