force-app/main/default/objects/Case/fields/Employees_Case__c.field-meta.xml
<CustomField>
    <fullName>Employees_Case__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK($User.Employee_Contact_Id__c)),
    NOT(ISBLANK(ContactId)),
    CONTAINS($User.Employee_Contact_Id__c, ContactId)), 
  TRUE, FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employees Case</label>
    <type>Checkbox</type>
</CustomField>