force-app/main/default/objects/Case/fields/GFLearn_Access__c.field-meta.xml
<CustomField>
    <fullName>GFLearn_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Access to the Gov of the Future Learning system is required.</description>
    <inlineHelpText>Check if access to the Gov of the Future Learning system is required.</inlineHelpText>
    <label>GFLearn Access</label>
    <type>Checkbox</type>
</CustomField>