force-app/main/default/objects/Case/fields/Is_User__c.field-meta.xml
<CustomField>
    <fullName>Is_User__c</fullName>
    <formula>IF( ContactId =  $User.Employee_Contact_Id__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User</label>
    <type>Checkbox</type>
</CustomField>