force-app/main/default/objects/Case/fields/Nature_of_Employee_Incident__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Employee_Incident__c</fullName>
    <inlineHelpText>What happened?</inlineHelpText>
    <label>Nature of Employee Incident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arrests</fullName>
            </value>
            <value>
                <fullName>Contractor Case</fullName>
            </value>
            <value>
                <fullName>EEO</fullName>
            </value>
            <value>
                <fullName>ER Grievance</fullName>
            </value>
            <value>
                <fullName>Failure to follow instructions</fullName>
            </value>
            <value>
                <fullName>Falsification</fullName>
            </value>
            <value>
                <fullName>FMLA</fullName>
            </value>
            <value>
                <fullName>Harassment</fullName>
            </value>
            <value>
                <fullName>Lack of Candor</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
            <value>
                <fullName>Lost/Stolen Equipment</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Misuse of GOV</fullName>
            </value>
            <value>
                <fullName>Misuse of Position</fullName>
            </value>
            <value>
                <fullName>Not Actionable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Procedure Violation</fullName>
            </value>
            <value>
                <fullName>Reasonable Accommodation</fullName>
            </value>
            <value>
                <fullName>T&amp;A</fullName>
            </value>
            <value>
                <fullName>Travel Card Misuse</fullName>
            </value>
            <value>
                <fullName>Unauthorized Release of Info</fullName>
            </value>
            <value>
                <fullName>Unprofessional Behavior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>