force-app/main/default/objects/Case/fields/Reasonable_Accommodation_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>Reasonable_Accommodation_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has Reasonable Accommodations Reviewed the Request?</inlineHelpText>
    <label>Reasonable Accommodation Review Complete</label>
    <type>Checkbox</type>
</CustomField>