force-app/main/default/objects/Case/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who Reported this Incident</description>
    <inlineHelpText>Who Reported this Incident</inlineHelpText>
    <label>Reported By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Reported By)</relationshipLabel>
    <relationshipName>Reported_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>