force-app/main/default/objects/Case/fields/Selected_Action__c.field-meta.xml
<CustomField>
    <fullName>Selected_Action__c</fullName>
    <label>Selected Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Personnel_Actions</valueSetName>
    </valueSet>
</CustomField>