force-app/main/default/objects/Case/fields/Senior_Leader_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Senior_Leader_Review_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has a division director or Higher reviewed this request?</inlineHelpText>
    <label>Senior Leader Review Completed</label>
    <type>Checkbox</type>
</CustomField>