force-app/main/default/objects/Case/fields/Supervisor_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Review_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the Manager Competed the review of the case?</inlineHelpText>
    <label>Supervisor Review Completed</label>
    <type>Checkbox</type>
</CustomField>