force-app/main/default/objects/Case/fields/Telework_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Telework_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Telework Agreement</label>
    <referenceTo>Telework_Agreement__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>