force-app/main/default/objects/Case/fields/TR_Air__c.field-meta.xml
<CustomField>
    <fullName>TR_Air__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Air</label>
    <type>Checkbox</type>
</CustomField>