force-app/main/default/objects/Case/fields/TR_Bus__c.field-meta.xml
<CustomField>
    <fullName>TR_Bus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bus</label>
    <type>Checkbox</type>
</CustomField>