force-app/main/default/objects/Case/fields/TR_Government_Owned_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>TR_Government_Owned_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Government Owned Vehicle</label>
    <type>Checkbox</type>
</CustomField>