force-app/main/default/objects/Case/fields/TR_Personal_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>TR_Personal_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Vehicle</label>
    <type>Checkbox</type>
</CustomField>