force-app/main/default/objects/Case/fields/TR_Rail__c.field-meta.xml
<CustomField>
    <fullName>TR_Rail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rail</label>
    <type>Checkbox</type>
</CustomField>