force-app/main/default/objects/Case/fields/TR_Rental_Car__c.field-meta.xml
<CustomField>
    <fullName>TR_Rental_Car__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental Car</label>
    <type>Checkbox</type>
</CustomField>