force-app/main/default/objects/Case/fields/TR_Taxi__c.field-meta.xml
<CustomField>
    <fullName>TR_Taxi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxi</label>
    <type>Checkbox</type>
</CustomField>