force-app/main/default/objects/Case/fields/TR_Travel_Request_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>TR_Travel_Request_Approval_Date__c</fullName>
    <label>Travel Request Approval Date</label>
    <type>DateTime</type>
</CustomField>