force-app/main/default/objects/Case/fields/TR_Travel_Request_Approver__c.field-meta.xml
<CustomField>
    <fullName>TR_Travel_Request_Approver__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Travel Request Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>