force-app/main/default/objects/Case/fields/TR_Travel_Request_Estimated_Costs__c.field-meta.xml
<CustomField>
    <fullName>TR_Travel_Request_Estimated_Costs__c</fullName>
    <label>Travel Request Estimated Costs</label>
    <summarizedField>TR_Itinerary_Point__c.TRIP_Total_Cost__c</summarizedField>
    <summaryForeignKey>TR_Itinerary_Point__c.TRIP_Travel_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>